# team1-Stock-Market-API

./: .coverage  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: main.yml
api/: .coverage  dev_stock_lookup.py  server.py  stock_fetcher.py
tests/: .coverage  test_api_endpoints.py  test_api_utils.py  test_favorites.py  test_functions.py  test_stock_fetcher.py
ui/: api_utils.py  favorites.py  functions.py  run_application.py
user_data/: my_stocks.json
